update dark mode text highlight issue. Update notebook text.

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -25,3 +25,11 @@
     background-color: #eef9fd;
     border-color: #4cb3d4;
 }
+
+.admonition p {
+    color: #474747;
+}
+
+.text_html p {
+    color: #474747;
+}
